# jujik

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  config.rs  controller.rs  entity.rs  error.rs  jujik.rs  lib.rs  main.rs  model.rs  pin.rs  tab.rs  test.rs  view.rs
src/entity/: date.rs  find.rs  kind.rs  owner.rs  permission.rs  size.rs
src/jujik/: controller.rs  model.rs  view.rs
