[package]
name = "jujik"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "wayland"]}
egui = "0.31.1"
winit = {version = "0.30.9", default-features = false, features = ["wayland"]}
log = "0.4.26"
simplelog = "0.12.2"
nix = {version = "0.29.0", features = ["user"]}
egui_extras = "0.31.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
