[package]
name = "jujik"
version = "0.1.0"
edition = "2024"

[features]
dir_size = []
print_command = []

[dependencies]
eframe = {version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "wayland"]}
egui = "0.31.1"
winit = {version = "0.30.9", default-features = false, features = ["wayland"]}
log = "0.4.26"
simplelog = "0.12.2"
nix = {version = "0.29.0", features = ["user"]}
egui_extras = {version = "0.31.1", features = ["chrono"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = {version = "0.4.41", features = ["serde"]}
regex = "1.11.1"
tempfile = "3.20.0"
